--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,7 +2,7 @@
     "packageDirectories": [
         {
             "path": "force-app",
-            "default": false
+            "default": true
         },
         {
             "path": "Package A",
@@ -13,7 +13,7 @@
         },
         {
             "path": "Package B",
-            "default": true,
+            "default": false,
             "dependencies": [
                 {
                     "package": "Package A",
