--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -31,6 +31,7 @@
     "sourceApiVersion": "55.0",
     "packageAliases": {
         "Package A": "0Ho7Q0000008OZzSAM",
-        "Package B": "0Ho7Q0000008Oa4SAE"
+        "Package B": "0Ho7Q0000008Oa4SAE",
+        "Package A@0.1.0-2-main": "04t7Q000000dEsjQAE"
     }
 }
